# Python-voip.ms

./: .gitignore  .voip-ms.conf  INSTALL  MANIFEST  MANIFEST.in  Makefile  README.install  README.md  README.txt  RELEASE_NOTES  REQUIREMENTS  pyproject.toml  requirements.txt  setup.py
doc/man/man1/: black-list.1  get-cdrs.1  get-did-info.1  send-sms-message.1
scripts/: black-list  get-cdrs  get-did-info  send-sms-message
src/voip_ms_moxad/: __init__.py  blacklist.py  constants.py  functions.py  get_cdrs.py  get_did_info.py  globals.py  send_sms_message.py
